# middlewares/Validation.js
@@ -13,7 +13,7 @@ module.exports.CreateChapterValidation = CreateChapterValidation = (data) => {
 }
 module.exports.UpdateChapterValidation = UpdateChapterValidation = (data) => {
     const schema = Joi.object({
-        chapter_id: Joi.number().min(1).required(),
+        chapter_id: Joi.number().required(),
         name: Joi.string().required(),
         description: Joi.string().required(),
         logo_path: Joi.string().required(),
@@ -28,23 +28,25 @@ module.exports.CreateChapterInfoValidation = CreateChapterInfoValidation = (data
         mission: Joi.string().required(),
         vission: Joi.string().required(),
         objectives: Joi.string().required(),
-        chaper_id: Joi.number().min(1).required(),
+        chapter_id: Joi.number().required(),
     })
     return schema.validate(data)
 }
 module.exports.UpdateChapterInfoValidation = UpdateChapterInfoValidation = (data) => {
     const schema = Joi.object({
-        chapter_info_id: Joi.number().min(1).required(),
+        chapter_info_id: Joi.number().required(),
         mission: Joi.string().required(),
         vission: Joi.string().required(),
         objectives: Joi.string().required(),
-        chaper_id: Joi.number().min(1).required(),
+        chapter_id: Joi.number().required(),
     })
     return schema.validate(data)
 }
 
 module.exports.CreateChapterMemberValidation = CreateChapteMemberValidation = (data) => {
     const schema = Joi.object({
+        role_id: Joi.number().required(),
+        chapter_id:Joi.number().required(),
         isActive: Joi.boolean().required(),
         start_date: Joi.date().required(),
         end_date: Joi.date(),
@@ -53,9 +55,9 @@ module.exports.CreateChapterMemberValidation = CreateChapteMemberValidation = (d
 }
 module.exports.UpdateChapterMemberValidation = UpdateChapterMemberValidation = (data) => {
     const schema = Joi.object({
-        member_id: Joi.number().min(1).required(),
-        role_id: Joi.number().min(1).required(),
-        chapter_id: Joi.number().min(1).required(),
+        member_id: Joi.number().required(),
+        role_id: Joi.number().required(),
+        chapter_id: Joi.number().required(),
         isActive: Joi.boolean().required(),
         start_date: Joi.date().required(),
         end_date: Joi.date(),
@@ -66,22 +68,22 @@ module.exports.CreateEventValidation = CreateEventValidation = (data) => {
     const schema = Joi.object({
         title: Joi.string().required(),
         description: Joi.string().required(),
-        start_date: Joi.boolean().required(),
-        end_date: Joi.boolean().required(),
-        event_type_id: Joi.number().min(1).required(),
-        chaper_id:Joi.number().min(1).required(),
+        start_date: Joi.date().required(),
+        end_date: Joi.date().required(),
+        event_type_id: Joi.number().required(),
+        chapter_id:Joi.number().required(),
     })
     return schema.validate(data)
 }
 module.exports.UpdateEventValidation = UpdateEventValidation = (data) => {
     const schema = Joi.object({
-        event_id: Joi.number().min(1).required(),
+        event_id: Joi.number().required(),
         title: Joi.string().required(),
         description: Joi.string().required(),
-        start_date: Joi.boolean().required(),
-        end_date: Joi.boolean().required(),
-        event_type_id: Joi.number().min(1).required(),
-        chaper_id:Joi.number().min(1).required(),
+        start_date: Joi.date().required(),
+        end_date: Joi.date().required(),
+        event_type_id: Joi.number().required(),
+        chapter_id:Joi.number().required(),
     })
     return schema.validate(data)
 }
@@ -93,7 +95,7 @@ module.exports.CreateEventTypeValidation = CreateEventTypeValidation = (data) =>
 }
 module.exports.UpdateEventTypeValidation = UpdateEventTypeValidation = (data) => {
     const schema = Joi.object({
-        event_type_id: Joi.number().min(1).required(),
+        event_type_id: Joi.number().required(),
         event_type: Joi.string().required(),
     })
     return schema.validate(data)
@@ -104,28 +106,28 @@ module.exports.CreateGalleryValidation = CreateGalleryValidation = (data) => {
         name: Joi.string().required(),
         path: Joi.string().required(),
         description: Joi.string().required(),
-        event_id: Joi.number().min(1).required(),
+        event_id: Joi.number().required(),
     })
     return schema.validate(data)
 }
 module.exports.UpdateGalleryValidation = UpdateGalleryValidation = (data) => {
     const schema = Joi.object({
-        gallery_id: Joi.number().min(1).required(),
+        gallery_id: Joi.number().required(),
         name: Joi.string().required(),
         path: Joi.string().required(),
         description: Joi.string().required(),
-        event_id: Joi.number().min(1).required(),
+        event_id: Joi.number().required(),
     })
     return schema.validate(data)
 }
 
 module.exports.CreateMemberValidation = CreateMemberValidation = (data) => {
     const schema = Joi.object({
-        firstname: Joi.string().min(3).max(10).required(),
-        lastname: Joi.string().min(3).max(10).required(),
+        firstname: Joi.string().required(),
+        lastname: Joi.string().required(),
         email: Joi.string().email({ minDomainSegments: 2, tlds: { allow: ['co'] } }).required(),
         password: Joi.string().pattern(new RegExp('^[a-zA-Z0-9]{3,30}$')).required(),
-        document: Joi.number().min(5).max(15).required(),
+        document: Joi.number().required(),
         phone: Joi.number().required(),
         image_path: Joi.string().required()
     })
@@ -133,12 +135,12 @@ module.exports.CreateMemberValidation = CreateMemberValidation = (data) => {
 }
 module.exports.UpdateMemberValidation = UpdateMemberValidation = (data) => {
     const schema = Joi.object({
-        member_id: Joi.number().min(1).required(),
+        member_id: Joi.number().required(),
         firstname: Joi.string().min(3).max(10).required(),
         lastname: Joi.string().min(3).max(10).required(),
         email: Joi.string().email({ minDomainSegments: 2, tlds: { allow: ['co'] } }).required(),
         password: Joi.string().pattern(new RegExp('^[a-zA-Z0-9]{3,30}$')).required(),
-        document: Joi.number().min(5).max(15).required(),
+        document: Joi.number().required(),
         phone: Joi.number().required(),
         image_path: Joi.string().required()
     })
@@ -156,7 +158,7 @@ module.exports.CreateRoleValidation = CreateRoleValidation = (data) => {
 }
 module.exports.UpdateRoleValidation = UpdateRoleValidation = (data) => {
     const schema = Joi.object({
-        role_id: Joi.number().min(1).required(),
+        role_id: Joi.number().required(),
         name: Joi.string().required(),
         description: Joi.string().required(),
         canCreate: Joi.boolean().required(),
